--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="author" content="name" />
-    <meta name="description" content="$JJCAT SOLANA" />
-    <meta name="keywords" content="$JJCAT SOLANA" />
-      <title>$JJCAT SOLANA</title>
+    <meta name="description" content="$JJCAT Coin Solana" />
+    <meta name="keywords" content="$JJCAT Coin Solana" />
+      <title>$JJCAT Coin Solana</title>
       <link rel="stylesheet" href="style.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
